Enums, xml for operation-edit done

--- a/modules/global/src/com/company/operation/entity/messages.properties
+++ b/modules/global/src/com/company/operation/entity/messages.properties
@@ -8,4 +8,7 @@ Operation.amount=Сумма
 Operation.data=Дата
 Operation.category=Категория
 Operation.commentary=Комментарий
-Operation.account=Account
+Operation.account=Аккаунт
+OperationType=Operation type
+OperationType.ADD=Пополнение
+OperationType.REDUCE=Счисление
