Second enum and service written but not checked and connected

--- a/modules/global/src/com/company/operation/entity/messages.properties
+++ b/modules/global/src/com/company/operation/entity/messages.properties
@@ -12,3 +12,11 @@ Operation.account=Аккаунт
 OperationType=Operation type
 OperationType.ADD=Пополнение
 OperationType.REDUCE=Счисление
+OperationCategory=Operation category
+OperationCategory.HEALTH=Здоровье
+OperationCategory.FOOD=Еда
+OperationCategory.SERVICES=Услуги
+OperationCategory.TECHNICS=Техника
+OperationCategory.ENTERTAINMENT=Развлечения
+OperationCategory.CLOTHES=Одежда
+OperationCategory.OTHER=Прочее
