--- a/modules/web/src/com/company/operation/web/messages.properties
+++ b/modules/web/src/com/company/operation/web/messages.properties
@@ -11,3 +11,4 @@ loginWindow.logoImage = branding/app-icon-login.png
 menu_config.application-operation = Application
 menu_config.operation_Account.browse=Accounts
 menu_config.operation_Operation.browse=Operations
+menu_config.operation_Operation-spendings.browse=Operation spendingses
