uselles lines deleted

--- a/modules/global/src/com/company/operation/entity/messages.properties
+++ b/modules/global/src/com/company/operation/entity/messages.properties
@@ -11,7 +11,7 @@ Operation.commentary=Комментарий
 Operation.account=Аккаунт
 OperationType=Operation type
 OperationType.ADD=Пополнение
-OperationType.REDUCE=Счисление
+OperationType.REDUCE=Списание
 OperationCategory=Operation category
 OperationCategory.HEALTH=Здоровье
 OperationCategory.FOOD=Еда
