--- a/modules/web/src/com/company/operation/web/screens/account/messages.properties
+++ b/modules/web/src/com/company/operation/web/screens/account/messages.properties
@@ -1,2 +1,2 @@
-accountBrowse.caption=Account browser
-accountEdit.caption=Account editor
+accountBrowse.caption=Счета
+accountEdit.caption=Создание счета
