--- a/modules/web/src/com/company/operation/web/screens/operation/messages.properties
+++ b/modules/web/src/com/company/operation/web/screens/operation/messages.properties
@@ -1,3 +1,3 @@
-operationBrowse.caption=Operation browser
-operationEdit.caption=Operation editor
-operationBrowseSpendings.caption=Operation browser
+operationBrowse.caption=Операции
+operationEdit.caption=Создание операции
+operationBrowseSpendings.caption=Подсчет трат по категории
