Init/update not work

--- a/modules/global/src/com/company/operation/entity/messages.properties
+++ b/modules/global/src/com/company/operation/entity/messages.properties
@@ -8,11 +8,11 @@ Operation.amount=Сумма
 Operation.data=Дата
 Operation.category=Категория
 Operation.commentary=Комментарий
-Operation.account=Аккаунт
-OperationType=Operation type
+Operation.account=Счёт
+OperationType=Тип операции
 OperationType.ADD=Пополнение
 OperationType.REDUCE=Списание
-OperationCategory=Operation category
+OperationCategory=Категория операции
 OperationCategory.HEALTH=Здоровье
 OperationCategory.FOOD=Еда
 OperationCategory.SERVICES=Услуги
