--- a/modules/web/src/com/company/operation/web/messages.properties
+++ b/modules/web/src/com/company/operation/web/messages.properties
@@ -8,7 +8,7 @@ loginWindow.caption = CUBA Login
 loginWindow.welcomeLabel = Welcome to CUBA!
 loginWindow.logoImage = branding/app-icon-login.png
 
-menu_config.application-operation = Application
-menu_config.operation_Account.browse=Accounts
-menu_config.operation_Operation.browse=Operations
-menu_config.operation_Operation-spendings.browse=Operation spendingses
+menu_config.application-operation = Функционал приложения
+menu_config.operation_Account.browse=Счета
+menu_config.operation_Operation.browse=Операции
+menu_config.operation_Operation-spendings.browse=Просмотр трат по категории
